--- a/about/index.html
+++ b/about/index.html
@@ -64,15 +64,15 @@
             </tr>
             <tr>
               <th>代表取締役</th>
-              <td>藤平 健人</td>
+              <td>藤平 賢人　　Kento Fujihira</td>
             </tr>
             <tr>
               <th>所在地</th>
-              <td>東京都</td>
+              <td>東京都渋谷区</td>
             </tr>
             <tr>
               <th>事業内容</th>
-              <td>クリエイター支援事業<br>テクノロジーサービスの企画・開発・運営</td>
+              <td>クリエイター支援事業<br>インターネットビジネスの企画・開発・運営</td>
             </tr>
             <tr>
               <th>お問い合わせ</th>
